[package]
name = "ticc-lsp"
version = "0.1.0"
authors = ["djade <djadenkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.5.0"
lsp-types = "0.86.0"
serde = "1.0.118"
serde_json = "1.0.60"
ticc = { path = "../ticc" }
