[package]
name = "ticc"
version = "0.1.0"
authors = ["djade <djadenkus@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "ticc"
path = "src/main.rs"
doctest = false

[dependencies]
ticc-core = { path = "../ticc-core" }
ticc-eval = { path = "../ticc-eval" }
ticc-syntax = { path = "../ticc-syntax" }
logos = "0.12.0"
codespan-reporting = "0.11.1"
internal-iterator = "0.1.1"
formatter = { path = "../formatter" }
structopt = "0.3.21"
